--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=LIN master (portable)
+name=LIN master portable
 version=1.0
 author=Georg Icking-Konert
 maintainer=Georg Icking-Konert (gicking)
