--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,75 @@ on:
 
 jobs:
 
+  # Build for AVR
+  build-for-avr:
+    runs-on: ubuntu-latest
+    env:
+      SKETCHES_REPORTS_PATH: sketches-reports
+    strategy:
+      fail-fast: false
+      matrix:
+        board:
+          - fqbn: arduino:avr:mega                    # Arduino Mega2560
+            artifact-name-suffix: arduino_avr_mega
+    steps:
+      - uses: actions/checkout@v4.2.2                 # check-out this repo
+      - uses: arduino/compile-sketches@v1.1.2         # build Arduino examples
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}   # required for private repos
+          fqbn: ${{ matrix.board.fqbn }}
+          libraries: |
+            - source-path: ./
+          sketch-paths: |
+            - examples/LIN_master_HWSerial_Blk
+            - examples/LIN_master_SWSerial_Blk
+            - examples/LIN_master_HWSerial_Bkg
+            - examples/LIN_master_HWSerial_Bkg_Evt
+            - examples/LIN_master_Dual_HWSerial_Bkg
+          cli-compile-flags: |
+            - --warnings="all"
+      - uses: actions/upload-artifact@v4.4.3          # upload test reports
+        with:
+          if-no-files-found: error
+          path: ${{ env.SKETCHES_REPORTS_PATH }}
+          name: sketches-report-${{ matrix.board.artifact-name-suffix }}
+
+
+  # Build for SAMD
+  build-for-samd:
+    runs-on: ubuntu-latest
+    env:
+      SKETCHES_REPORTS_PATH: sketches-reports
+    strategy:
+      fail-fast: false
+      matrix:
+        board:
+          - fqbn: arduino:sam:arduino_due_x           # Arduino Due (Native USB Port)
+            artifact-name-suffix: arduino_sam_arduino_due_x
+          - fqbn: arduino:sam:arduino_due_x_dbg       # Arduino Due (Programming Port)
+            artifact-name-suffix: arduino_sam_arduino_due_x_dbg
+    steps:
+      - uses: actions/checkout@v4.2.2                 # check-out this repo
+      - uses: arduino/compile-sketches@v1.1.2         # build Arduino examples
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}   # required for private repos
+          fqbn: ${{ matrix.board.fqbn }}
+          libraries: |
+            - source-path: ./
+          sketch-paths: |
+            - examples/LIN_master_HWSerial_Blk
+            - examples/LIN_master_HWSerial_Bkg
+            - examples/LIN_master_HWSerial_Bkg_Evt
+            - examples/LIN_master_Dual_HWSerial_Bkg
+          cli-compile-flags: |
+            - --warnings="all"
+      - uses: actions/upload-artifact@v4.4.3          # upload test reports
+        with:
+          if-no-files-found: error
+          path: ${{ env.SKETCHES_REPORTS_PATH }}
+          name: sketches-report-${{ matrix.board.artifact-name-suffix }}
+
+
   # Build for ESP8266
   build-for-esp8266:
     runs-on: ubuntu-latest
@@ -71,6 +140,72 @@ jobs:
             - examples/LIN_master_HWSerial_ESP8266_Bkg
             - examples/LIN_master_HWSerial_ESP8266_Bkg_Evt
             - examples/LIN_master_HWSerial_ESP8266_Ticker
+            
+      # upload test reports
+      - uses: actions/upload-artifact@v4.4.3
+        with:
+          if-no-files-found: error
+          path: ${{ env.SKETCHES_REPORTS_PATH }}
+          name: sketches-report-${{ matrix.board.artifact-name-suffix }}
+
+
+  # Build for ESP32
+  build-for-esp32:
+    runs-on: ubuntu-latest
+    env:
+      SKETCHES_REPORTS_PATH: sketches-reports
+    strategy:
+      fail-fast: false
+      matrix:
+        board:
+          - fqbn: esp32:esp32:esp32da             # ESP32-WROOM-DA
+            artifact-name-suffix: esp32da
+    steps:
+
+      # Install Arduino CLI
+      - name: install Arduino CLI
+        run: |
+          curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
+          export PATH="$PWD/bin:$PATH"
+          echo "PATH=$PATH"
+          which arduino-cli
+          arduino-cli version
+
+      # Create Board Manager file
+      - name: create arduino-cli.yaml
+        run: |
+          mkdir -p ~/.arduino15
+          echo "directory: ~/.arduino15" > ~/.arduino15/arduino-cli.yaml
+          echo "board_manager:" >> ~/.arduino15/arduino-cli.yaml
+          echo "  additional_urls:" >> ~/.arduino15/arduino-cli.yaml
+          echo "    - https://adafruit.github.io/arduino-board-index/package_adafruit_index.json" >> ~/.arduino15/arduino-cli.yaml
+          echo "    - https://arduino.esp8266.com/stable/package_esp8266com_index.json" >> ~/.arduino15/arduino-cli.yaml
+          echo "    - https://espressif.github.io/arduino-esp32/package_esp32_index.json" >> ~/.arduino15/arduino-cli.yaml
+          cat ~/.arduino15/arduino-cli.yaml
+      
+      # Install required boards
+      - name: install ESP32 core
+        run: |
+          export PATH="$PWD/bin:$PATH"
+          arduino-cli core update-index
+          arduino-cli core install esp32:esp32
+
+      # check-out this repository
+      - uses: actions/checkout@v4.2.2
+
+      # build Arduino examples
+      - uses: arduino/compile-sketches@v1.1.2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}   # required for private repos
+          fqbn: ${{ matrix.board.fqbn }}
+          libraries: |
+            - source-path: ./
+          sketch-paths: |
+            - examples/LIN_master_HWSerial_ESP32_Blk
+            - examples/LIN_master_SWSerial_Blk
+            - examples/LIN_master_HWSerial_ESP32_Bkg
+            - examples/LIN_master_HWSerial_ESP32_Bkg_Evt
+            - examples/LIN_master_HWSerial_ESP32_Ticker
             
       # upload test reports
       - uses: actions/upload-artifact@v4.4.3
