--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,8 @@ jobs:
             - examples/LIN_master_SWSerial_Blk
           cli-compile-flags: | 
             - --warnings="all"
-            - --build-property="compiler.cpp.extra_flags=\"-DMY_DEBUG=1  -DAUTO_DR=1\""
+            - --build-property="compiler.cpp.extra_flags=\"-DLIN_MASTER_DEBUG_SERIAL=Serial\""
+            - --build-property="compiler.cpp.extra_flags=\"-LIN_MASTER_DEBUG_LEVEL=3\""
       - uses: actions/upload-artifact@v4.4.3          # upload test reports
         with:
           if-no-files-found: error
