--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -155,8 +155,7 @@ jobs:
             - examples/LIN_master_SWSerial_Blk
           cli-compile-flags: |
             - --warnings="all"
-            - --build-property="compiler.cpp.extra_flags=\"-DLIN_MASTER_DEBUG_SERIAL=Serial1\""
-            - --build-property="compiler.cpp.extra_flags=\"-LIN_MASTER_DEBUG_LEVEL=3\""
+            - --build-property="compiler.cpp.extra_flags=\"-DLIN_MASTER_DEBUG_SERIAL=Serial1 -DLIN_MASTER_DEBUG_LEVEL=3\""
             
       # upload test reports
       - uses: actions/upload-artifact@v4.4.3
@@ -300,6 +299,7 @@ jobs:
             - examples/LIN_master_SWSerial_Blk
           cli-compile-flags: |
             - --warnings="all"
+          # no debug serial available
             
       # upload test reports
       - uses: actions/upload-artifact@v4.4.3
