--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,8 +45,7 @@ jobs:
             - examples/LIN_master_SWSerial_Blk
           cli-compile-flags: | 
             - --warnings="all"
-            - --build-property="compiler.cpp.extra_flags=\"-DLIN_MASTER_DEBUG_SERIAL=Serial\""
-            - --build-property="compiler.cpp.extra_flags=\"-LIN_MASTER_DEBUG_LEVEL=3\""
+            - --build-property="compiler.cpp.extra_flags=\"-DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3\""
       - uses: actions/upload-artifact@v4.4.3          # upload test reports
         with:
           if-no-files-found: error
@@ -84,8 +83,7 @@ jobs:
             - examples/LIN_master_RS485_HWSerial_Blk
           cli-compile-flags: |
             - --warnings="all"
-            - --build-property="compiler.cpp.extra_flags=\"-DLIN_MASTER_DEBUG_SERIAL=Serial\""
-            - --build-property="compiler.cpp.extra_flags=\"-LIN_MASTER_DEBUG_LEVEL=3\""
+            - --build-property="compiler.cpp.extra_flags=\"-DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3\""
       - uses: actions/upload-artifact@v4.4.3          # upload test reports
         with:
           if-no-files-found: error
@@ -228,8 +226,7 @@ jobs:
             - examples/LIN_master_SWSerial_Blk
           cli-compile-flags: |
             - --warnings="all"
-            - --build-property="compiler.cpp.extra_flags=\"-DLIN_MASTER_DEBUG_SERIAL=Serial1\""
-            - --build-property="compiler.cpp.extra_flags=\"-LIN_MASTER_DEBUG_LEVEL=3\""
+            - --build-property="compiler.cpp.extra_flags=\"-DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3\""
             
       # upload test reports
       - uses: actions/upload-artifact@v4.4.3
