--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,9 +43,9 @@ jobs:
             - examples/LIN_master_RS485_HWSerial_Blk
             - examples/LIN_master_RS485_SWSerial_Blk
             - examples/LIN_master_SWSerial_Blk
-          build-properties: build.extra_flags="-DLIN_MASTER_DEBUG_SERIAL -DLIN_MASTER_DEBUG_LEVEL=3"
           cli-compile-flags: | 
             - --warnings="all"
+            - --build-property build.extra_flags="-DLIN_MASTER_DEBUG_SERIAL -DLIN_MASTER_DEBUG_LEVEL=3"
           #- --build-property="compiler.cpp.extra_flags=-DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3"
       - uses: actions/upload-artifact@v4.4.3          # upload test reports
         with:
