--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
             - examples/LIN_master_SWSerial_Blk
           cli-compile-flags: | 
             - --warnings="all"
-            - --build-property "build.extra_flags=-DLIN_MASTER_DEBUG_SERIAL -DLIN_MASTER_DEBUG_LEVEL=3"
+            - --build-property="build.extra_flags=-DLIN_MASTER_DEBUG_SERIAL -DLIN_MASTER_DEBUG_LEVEL=3"
           #- --build-property="compiler.cpp.extra_flags=-DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3"
       - uses: actions/upload-artifact@v4.4.3          # upload test reports
         with:
