--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,24 +27,33 @@ jobs:
           - fqbn: arduino:avr:mega                    # Arduino Mega2560
             artifact-name-suffix: arduino_avr_mega
     steps:
-      - uses: actions/checkout@v4.2.2                 # check-out this repo
-      - uses: arduino/compile-sketches@v1.1.2         # build Arduino examples
+      
+      - name: Checkout code
+        uses: actions/checkout@v4.2.2
+
+      - name: Set up Arduino CLI
+        uses: arduino/setup-arduino-cli@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}   # required for private repos
-          fqbn: ${{ matrix.board.fqbn }}
-          libraries: |
-            - source-path: ./
-          sketch-paths: |
-            - examples/LIN_master_Dual_HWSerial_Bkg
-            - examples/LIN_master_HWSerial_Bkg
-            - examples/LIN_master_HWSerial_Bkg_Evt
-            - examples/LIN_master_HWSerial_Blk
-            - examples/LIN_master_RS485_HWSerial_Bkg
-            - examples/LIN_master_RS485_HWSerial_Blk
-            - examples/LIN_master_RS485_SWSerial_Blk
-            - examples/LIN_master_SWSerial_Blk
-          cli-compile-flags: --warnings="all" --build-property="build.extra_flags=-DLIN_MASTER_DEBUG_SERIAL"
-      - uses: actions/upload-artifact@v4.4.3          # upload test reports
+          version: latest
+
+      - name: Install dependencies
+        run: |
+          arduino-cli core update-index
+          arduino-cli core install arduino:avr
+  
+      - name: Compile Sketches
+        run: |
+          arduino-cli compile --fqbn ${{ matrix.board.fqbn }} --warnings all --build-property build.extra_flags="-DLIN_MASTER_DEBUG_SERIAL -DLIN_MASTER_DEBUG_LEVEL=3" examples/LIN_master_Dual_HWSerial_Bkg
+          arduino-cli compile --fqbn ${{ matrix.board.fqbn }} --warnings all --build-property build.extra_flags="-DLIN_MASTER_DEBUG_SERIAL -DLIN_MASTER_DEBUG_LEVEL=3" examples/LIN_master_HWSerial_Bkg
+          arduino-cli compile --fqbn ${{ matrix.board.fqbn }} --warnings all --build-property build.extra_flags="-DLIN_MASTER_DEBUG_SERIAL -DLIN_MASTER_DEBUG_LEVEL=3" examples/LIN_master_HWSerial_Bkg_Evt
+          arduino-cli compile --fqbn ${{ matrix.board.fqbn }} --warnings all --build-property build.extra_flags="-DLIN_MASTER_DEBUG_SERIAL -DLIN_MASTER_DEBUG_LEVEL=3" examples/LIN_master_HWSerial_Blk
+          arduino-cli compile --fqbn ${{ matrix.board.fqbn }} --warnings all --build-property build.extra_flags="-DLIN_MASTER_DEBUG_SERIAL -DLIN_MASTER_DEBUG_LEVEL=3" examples/LIN_master_RS485_HWSerial_Bkg
+          arduino-cli compile --fqbn ${{ matrix.board.fqbn }} --warnings all --build-property build.extra_flags="-DLIN_MASTER_DEBUG_SERIAL -DLIN_MASTER_DEBUG_LEVEL=3" examples/LIN_master_RS485_HWSerial_Blk
+          arduino-cli compile --fqbn ${{ matrix.board.fqbn }} --warnings all --build-property build.extra_flags="-DLIN_MASTER_DEBUG_SERIAL -DLIN_MASTER_DEBUG_LEVEL=3" examples/LIN_master_RS485_SWSerial_Blk
+          arduino-cli compile --fqbn ${{ matrix.board.fqbn }} --warnings all --build-property build.extra_flags="-DLIN_MASTER_DEBUG_SERIAL -DLIN_MASTER_DEBUG_LEVEL=3" examples/LIN_master_SWSerial_Blk
+
+      - name: Upload test reports
+        uses: actions/upload-artifact@v4.4.3
         with:
           if-no-files-found: error
           path: ${{ env.SKETCHES_REPORTS_PATH }}
