--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,12 +59,9 @@ jobs:
             - examples/LIN_master_RS485_SWSerial_Blk
             - examples/LIN_master_SWSerial_Blk
           cli-compile-flags: |
+            - --verbose
             - --build-property
-            - build.extra_flags="-Wall"
-            - --build-property
-            - build.extra_flags="-DLIN_MASTER_DEBUG_SERIAL=Serial"
-            - --build-property
-            - build.extra_flags="-DLIN_MASTER_DEBUG_LEVEL=3"
+            - build.extra_flags=-Wall -DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3
 
       # upload test reports
       - uses: actions/upload-artifact@v4.4.3
