--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,8 +114,7 @@ jobs:
             - examples/LIN_master_RS485_HWSerial_Blk
           cli-compile-flags: |
             - --verbose
-            - --build-property
-            - build.extra_flags=-Wall -DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3
+          # for some reason passing arguments via "cli-compile-flags" does not work for SAMD -> skip
 
       # upload test reports
       - uses: actions/upload-artifact@v4.4.3
